улучшение модального окна подтверждения

--- a/src/modules/components/notifications/Notifications.module.scss
+++ b/src/modules/components/notifications/Notifications.module.scss
@@ -32,6 +32,10 @@
   .notifications_warn {
     color: $site-color-9;
   }
+
+  .text_center {
+    text-align: center;
+  }
 }
 
 @media screen and (max-width: 1600px) {
