--- a/src/modules/components/confirm-modal/ConfirmModal.module.scss
+++ b/src/modules/components/confirm-modal/ConfirmModal.module.scss
@@ -5,17 +5,29 @@
   flex-direction: column;
   justify-content: space-around;
   position: relative;
-  width: 450px;
-  height: 150px;
+  width: max-content;
+  min-width: 400px;
+  max-width: 500px;
+  height: min-content;
+  min-height: 150px;
+  max-height: 450px;
+  overflow: hidden;
+  border-radius: 8px;
+  padding-top: 12px;
 
   .text {
     width: 100%;
     height: 32px;
     line-height: 32px;
-    font-size: 18px;
+    font-size: 17px;
     font-family: $fontCustom2;
     color: $site-color-2;
     text-align: center;
+    margin: 0 8px;
+  }
+
+  .children {
+    margin: 16px;
   }
 
   .actions {
@@ -24,6 +36,8 @@
     justify-content: space-around;
     width: 100%;
     height: auto;
+    margin-bottom: 12px;
+    padding: 0 8px;
   }
 
   .timeline {
