--- a/src/modules/components/[0_grouped_0]-Profile/my-prizes/My-prizes.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/my-prizes/My-prizes.module.scss
@@ -1,44 +1,52 @@
 @import "src/Variables";
 
-.boxPrizesWrapper {
+.prizes_container {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
+  overflow: auto;
+  padding-right: 10px;
 
-  .warn_title {
-    font-size: 18px;
-    font-weight: 400;
-    font-family: $fontCustom2;
-    color: $site-color-2;
-    text-align: center;
-    padding: 16px;
-    margin-top: 18%;
-    line-height: 1.35;
-
-    .link_size {
-      margin-left: 5px;
-      font-size: inherit;
-    }
+  &::-webkit-scrollbar {
+    width: 4px !important;
   }
 
-  .allPrizesContainer {
+  .br_line {
+    display: flex;
     width: 100%;
-    height: 100%;
+    height: auto;
+    margin: 12px 0;
+    border-width: 4px;
+    border-bottom-style: solid;
+    border-image: linear-gradient(to right, rgba(0, 0, 0, 0), $site-color-5, rgba(0, 0, 0, 0)) 1 0;
+  }
+
+  .type_container {
+    width: 100%;
+    height: auto;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    overflow: auto;
-    padding-right: 10px;
 
-    &::-webkit-scrollbar {
-      width: 4px !important;
+    .warn_title {
+      font-size: 18px;
+      font-weight: 400;
+      font-family: $fontCustom2;
+      color: $site-color-2;
+      text-align: center;
+      padding: 16px;
+      margin: 6% 0;
+      line-height: 1.35;
+
+      .link_size {
+        margin-left: 5px;
+        font-size: inherit;
+      }
     }
 
     .prize_wrapper_container {
-      width: 225px;
-      height: 325px;
       display: flex;
       flex-direction: column;
       border: 2px solid $site-color-15;
@@ -47,47 +55,28 @@
       background: $site-color-12;
       position: relative;
 
-      &:hover {
-        &:before {
-          opacity: 0.5;
-        }
-      }
-
-      &:before {
-        content: "";
-        position: absolute;
-        right: 0;
-        top: 0;
-        width: 75%;
-        height: 60%;
-        opacity: 0.25;
-        border-radius: 7px;
-        background: radial-gradient(ellipse at right top, $site-color-8 0%, $site-color-12 75%);
-        transition: all 0.35s ease;
-      }
-
       .image_container {
         display: flex;
-        width: 180px;
-        min-width: 180px;
-        max-width: 180px;
-        height: 180px;
-        min-height: 180px;
-        max-height: 180px;
+        width: 160px;
+        min-width: 160px;
+        max-width: 160px;
+        height: 160px;
+        min-height: 160px;
+        max-height: 160px;
 
-        .animation_image {
+        .animation {
           display: flex;
           position: relative;
 
           .fade {
             position: absolute;
-            top: -25px;
-            left: -25px;
-            right: -25px;
-            bottom: -25px;
+            top: -15px;
+            left: -15px;
+            right: -15px;
+            bottom: -15px;
             opacity: 0;
-            width: 190px;
-            height: 190px;
+            width: 170px;
+            height: 170px;
             transition: opacity 1s ease-in-out;
           }
 
@@ -97,14 +86,55 @@
         }
       }
 
+      .price {
+        font-family: $fontCustom2;
+        font-weight: 400;
+        font-size: 14px;
+        color: $color-3;
+        position: absolute;
+        top: 16px;
+        right: 16px;
+      }
+
       .description {
         display: flex;
         flex-direction: column;
-        width: 90%;
+        width: 92%;
         height: auto;
-        position: relative;
-        top: -20px;
         margin: 0 auto;
+
+        .custom_text {
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-start;
+          margin-bottom: 20px;
+
+          .name {
+            font-family: $fontCustom2;
+            font-weight: 400;
+            font-size: 13px;
+            color: $color-3;
+            text-align: center;
+            line-height: 20px;
+            margin-bottom: 12px;
+          }
+
+          .list_container {
+            display: flex;
+            flex-direction: column;
+            width: auto;
+            height: auto;
+
+            .list {
+              font-family: $fontCustom2;
+              font-weight: 400;
+              font-size: 12px;
+              color: $color-3;
+              text-align: center;
+              line-height: 20px;
+            }
+          }
+        }
 
         .information {
           font-family: $fontCustom2;
@@ -125,6 +155,45 @@
           margin: 0 auto;
           max-width: 50%;
         }
+      }
+    }
+
+    .pink,
+    .green {
+      &:before {
+        content: "";
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 75%;
+        height: 60%;
+        opacity: 0.25;
+        border-radius: 7px;
+        transition: all 0.35s ease;
+      }
+
+      &:hover {
+        &:before {
+          opacity: 0.5;
+        }
+      }
+    }
+
+    .green {
+      width: 225px;
+      height: 325px;
+
+      &:before {
+        background: radial-gradient(ellipse at right top, $site-color-8 0%, $site-color-12 75%);
+      }
+    }
+
+    .pink {
+      width: 325px;
+      height: 425px;
+
+      &:before {
+        background: radial-gradient(ellipse at right top, $site-color-10 0%, $site-color-12 75%);
       }
     }
   }
