--- a/src/modules/components/[0_grouped_0]-Shopkeepers/one-item/One-item.module.scss
+++ b/src/modules/components/[0_grouped_0]-Shopkeepers/one-item/One-item.module.scss
@@ -8,10 +8,7 @@ $length: 34px;
 
   .item {
     display: flex;
-    width: $parameterItem;
-    height: $parameterItem;
     padding: 1px;
-    margin: 2px;
     border-radius: 4px;
     border: 2px solid $site-color-15;
     transition: all 0.3s ease;
@@ -30,16 +27,25 @@ $length: 34px;
       height: auto;
       position: absolute;
       display: flex;
-      right: 3px;
-      bottom: 3px;
-      font-size: 13px;
       font-weight: 400;
       color: $site-color-2;
       font-family: $fontCustom2;
     }
   }
 
-  .mini {
+  .medium {
+    width: $parameterItem;
+    height: $parameterItem;
+    margin: 2px;
+
+    .count {
+      font-size: 13px;
+      right: 3px;
+      bottom: 3px;
+    }
+  }
+
+  .small {
     width: $length;
     height: $length;
     margin: 1px;
@@ -63,14 +69,13 @@ $length: 34px;
     z-index: 50;
     margin-left: 28px;
 
-    .shulker_wrapper {
+    ._wrapper {
       display: flex;
       flex-direction: row;
       width: max-content;
       height: max-content;
       background: $site-color-12;
-      border-radius: 5px;
+      border-radius: 4px;
     }
   }
 }
-
