--- a/src/modules/components/[0_grouped_0]-Shopkeepers/one-item/One-item.module.scss
+++ b/src/modules/components/[0_grouped_0]-Shopkeepers/one-item/One-item.module.scss
@@ -1,8 +1,5 @@
 @import "src/Variables";
 
-$parameterItem: 64px;
-$length: 34px;
-
 .item_block {
   display: flex;
 
@@ -34,8 +31,8 @@ $length: 34px;
   }
 
   .medium {
-    width: $parameterItem;
-    height: $parameterItem;
+    width: 64px;
+    height: 64px;
     margin: 2px;
 
     .count {
@@ -46,8 +43,8 @@ $length: 34px;
   }
 
   .small {
-    width: $length;
-    height: $length;
+    width: 32px;
+    height: 32px;
     margin: 1px;
 
     .count {
@@ -74,7 +71,7 @@ $length: 34px;
       flex-direction: row;
       width: max-content;
       height: max-content;
-      background: $site-color-12;
+      background: $site-color-1;
       border-radius: 4px;
     }
   }
