--- a/src/modules/components/[0_grouped_0]-Shopkeepers/preview-component/Preview-component.module.scss
+++ b/src/modules/components/[0_grouped_0]-Shopkeepers/preview-component/Preview-component.module.scss
@@ -6,9 +6,9 @@
   width: auto;
   margin: 10px auto 0 auto;
 
-  .view_shulker {
-    width: auto;
-    height: auto;
+  .view_inventory {
+    border: 1px solid $site-color-5;
+    border-radius: 4px;
   }
 
   .view_item {
@@ -31,7 +31,14 @@
       height: auto;
       border-width: 1px;
       border-right-style: solid;
-      border-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), $site-color-5, $site-color-5, $site-color-5, rgba(0, 0, 0, 0)) 1 100%;
+      border-image: linear-gradient(
+          to bottom,
+          rgba(0, 0, 0, 0),
+          $site-color-5,
+          $site-color-5,
+          $site-color-5,
+          rgba(0, 0, 0, 0)
+      ) 1 100%;
 
       .imageWrapperAll {
         width: 204px;
