--- a/src/modules/pages/general/General.module.scss
+++ b/src/modules/pages/general/General.module.scss
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
 
-  .rowContainerNumberOne {
+  .row_container_one {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -23,36 +23,11 @@
     background: url(../../../bases/assets/webp/Main-background.webp) no-repeat center;
     background-size: cover;
 
-    .mainContent {
+    .main_content {
       display: flex;
       flex-direction: column;
       height: 100%;
       width: 100%;
-
-      .mainTitleH1 {
-        margin: 80px auto 0 auto;
-        width: auto;
-        height: 160px;
-        line-height: 160px;
-        font-weight: 400;
-        font-size: 110px;
-        color: $site-color-2;
-        font-family: $fontCustom1;
-
-        .coloredTitleSpanOne {
-          color: $site-color-9;
-          font: inherit;
-          overflow: hidden;
-          position: relative;
-        }
-
-        .coloredTitleSpanTwo {
-          color: $site-color-10;
-          font: inherit;
-          overflow: hidden;
-          position: relative;
-        }
-      }
 
       .logo {
         max-width: 1500px;
@@ -61,17 +36,18 @@
         margin: 0 auto;
       }
 
-      .mainTextH3 {
+      .main_text {
         width: auto;
         font-weight: 400;
-        font-size: 25px;
+        font-size: 24px;
         height: 30px;
         line-height: 30px;
         margin: 0 auto;
         color: $site-color-2;
+        font-family: $fontCustom2;
       }
 
-      .buttonContainerWrapper {
+      .button_application {
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -126,7 +102,7 @@
     }
   }
 
-  .rowContainerNumberTwo {
+  .row_container_two {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -135,7 +111,7 @@
     padding-top: 125px;
     padding-bottom: 100px;
 
-    .contentInformation {
+    .content_information {
       display: flex;
       flex-direction: row;
       justify-content: space-evenly;
@@ -143,13 +119,13 @@
       width: 100%;
       color: $site-color-2;
 
-      .informationTextDivStyle {
+      .information_text_div_style {
         width: 50%;
         max-width: 550px;
         height: 100%;
         padding: 50px;
 
-        .h2Information {
+        .h2_information {
           font-weight: 400;
           font-size: 48px;
           height: 60px;
@@ -159,23 +135,23 @@
           font-family: $fontCustom3;
         }
 
-        .leftH2 {
+        .left_h2 {
           text-align: left;
         }
 
-        .rightH2 {
+        .right_h2 {
           text-align: right;
         }
 
-        .leftH4 {
+        .left_h4 {
           text-align: left;
         }
 
-        .rightH4 {
+        .right_h4 {
           text-align: right;
         }
 
-        .h4Information {
+        .h4_information {
           font-weight: 400;
           font-style: normal;
           font-size: 20px;
@@ -183,13 +159,13 @@
         }
       }
 
-      .informationWrapperImage {
+      .information_wrapper_image {
         width: 50%;
         max-width: 550px;
         height: 100%;
         padding: 50px;
 
-        .informationImageStyle {
+        .information_image_style {
           width: 100%;
           height: auto;
         }
@@ -197,13 +173,13 @@
     }
   }
 
-  .rowContainerNumberThree {
+  .row_container_three {
     width: 100%;
     height: auto;
     background: url(../../../bases/assets/webp/background-block.webp);
 
-    .titleBlock {
-      .titleH3 {
+    .title_block {
+      .title_h3 {
         width: auto;
         height: 80px;
         line-height: 80px;
@@ -216,7 +192,7 @@
         font-family: $fontCustom3;
       }
 
-      .titleH4 {
+      .title_h4 {
         height: auto;
         max-width: 550px;
         width: auto;
@@ -229,7 +205,7 @@
       }
     }
 
-    .blockWorlds {
+    .block_worlds {
       display: flex;
       flex-direction: row;
       justify-content: space-evenly;
@@ -240,7 +216,7 @@
       transition: all 0.5s ease;
       position: relative;
 
-      .hoverMeBlock {
+      .hove_me {
         position: absolute;
         width: 500px;
         height: 500px;
@@ -250,14 +226,14 @@
     }
   }
 
-  .lineNoContentTop {
+  .line_no_content_top {
     height: 200px;
     width: 100%;
     background: $site-color-3;
     background: linear-gradient(180deg, $site-color-3 0%, transparent 100%);
   }
 
-  .lineNoContentBottom {
+  .line_no_content_bottom {
     height: 200px;
     width: 100%;
     background: $site-color-3;
@@ -265,19 +241,88 @@
   }
 }
 
+.worlds {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  max-width: 500px;
+  min-width: 350px;
+
+  .circle {
+    display: flex;
+    border: 5px solid $site-color-2;
+    border-radius: 50%;
+    width: 27px;
+    height: 27px;
+    margin: 0 auto;
+  }
+
+  .name {
+    width: 100%;
+    height: 30px;
+    margin-top: 10px;
+    line-height: 30px;
+    font-size: 30px;
+    font-weight: 400;
+    color: $site-color-2;
+    text-align: center;
+    font-family: $fontCustom2;
+  }
+
+  .hr_90_deg {
+    margin: 15px auto;
+    width: auto;
+    height: 90px;
+    border-left: 2px solid $site-color-2;
+  }
+
+  .image_text {
+    display: flex;
+    flex-direction: column;
+    min-width: 325px;
+    max-height: 550px;
+    min-height: 350px;
+    height: auto;
+    margin: 0 auto;
+
+    img {
+      width: 325px;
+      height: 325px;
+      z-index: 2;
+    }
+  }
+
+  .information {
+    width: auto;
+    max-width: 300px;
+    min-width: 250px;
+    margin-top: 50px;
+    color: $site-color-2;
+    height: auto;
+    min-height: 100px;
+    max-height: 150px;
+    text-align: center;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    position: relative;
+    top: -100px;
+    opacity: 0;
+    transition: all 0.65s ease;
+    z-index: 1;
+  }
+}
+
+.image_text:hover .information {
+  opacity: 1;
+  top: 0;
+}
+
 @media screen and (max-width: 1600px) {
   .main {
-    .rowContainerNumberOne {
-      .mainContent {
-        .mainTitleH1 {
-          margin-top: 75px;
-        }
-      }
-    }
-
-    .rowContainerNumberThree {
-      .blockWorlds {
-        .hoverMeBlock {
+    .row_container_three {
+      .block_worlds {
+        .hove_me {
           width: 400px;
           height: 400px;
           //left: 750px;
@@ -289,17 +334,9 @@
 
 @media screen and (max-width: 1400px) {
   .main {
-    .rowContainerNumberOne {
-      .mainContent {
-        .mainTitleH1 {
-          margin-top: 70px;
-        }
-      }
-    }
-
-    .rowContainerNumberThree {
-      .blockWorlds {
-        .hoverMeBlock {
+    .row_container_three {
+      .block_worlds {
+        .hove_me {
           width: 350px;
           height: 350px;
           //left: 690px;
@@ -311,54 +348,45 @@
 
 @media screen and (max-width: 1280px) {
   .main {
-    .rowContainerNumberOne {
-      .mainContent {
-        .mainTitleH1 {
-          font-size: 100px;
-        }
-      }
-    }
-
-    .rowContainerNumberTwo {
+    .row_container_two {
       padding-top: 85px;
       padding-bottom: 80px;
 
-      .contentInformation {
+      .content_information {
         height: auto;
         margin-bottom: 30px;
 
-        .informationTextDivStyle {
+        .information_text_div_style {
           max-width: 500px;
           padding: 40px;
 
-          .h2Information {
+          .h2_information {
             font-size: 44px;
             height: 54px;
             line-height: 54px;
           }
         }
 
-        .informationWrapperImage {
+        .information_wrapper_image {
           max-width: 500px;
           padding: 40px;
-
         }
       }
     }
 
-    .rowContainerNumberThree {
-      .titleBlock {
-        .titleH3 {
+    .row_container_three {
+      .title_block {
+        .title_h3 {
           font-size: 54px;
         }
 
-        .titleH4 {
+        .title_h4 {
           font-size: 16px;
         }
       }
 
-      .blockWorlds {
-        .hoverMeBlock {
+      .block_worlds {
+        .hove_me {
           width: 350px;
           height: 350px;
           //left: 670px;
@@ -366,61 +394,90 @@
       }
     }
   }
+
+  .worlds {
+    width: auto;
+    max-width: 400px;
+    min-width: 250px;
+
+    .circle {
+      width: 24px;
+      height: 24px;
+      border: 4px solid $site-color-2;
+    }
+
+    .name {
+      font-size: 26px;
+    }
+
+    .hr_90_deg {
+      height: 78px;
+    }
+
+    .image_text {
+      min-width: 300px;
+      max-width: 350px;
+
+      img {
+        width: 300px;
+        height: 300px;
+      }
+    }
+
+    .information {
+      font-size: 15px;
+    }
+  }
 }
 
 @media screen and (max-width: 1024px) {
   .main {
-    .rowContainerNumberOne {
-      .mainContent {
-        .mainTitleH1 {
-          margin-top: 65px;
-          font-size: 82px;
-        }
-
+    .row_container_one {
+      .main_content {
         .logo {
           min-width: 600px;
         }
 
-        .mainTextH3 {
+        .main_text {
           font-size: 20px;
         }
       }
     }
 
-    .rowContainerNumberTwo {
-      .contentInformation {
+    .row_container_two {
+      .content_information {
         padding: 10px;
 
-        .informationTextDivStyle {
+        .information_text_div_style {
           padding: 25px;
         }
 
-        .informationWrapperImage {
+        .information_wrapper_image {
           padding: 25px;
         }
       }
     }
 
-    .rowContainerNumberThree {
-      .titleBlock {
-        .titleH3 {
+    .row_container_three {
+      .title_block {
+        .title_h3 {
           font-size: 54px;
         }
       }
 
-      .blockWorlds {
-        .hoverMeBlock {
+      .block_worlds {
+        .hove_me {
           width: 325px;
           height: 325px;
         }
       }
     }
 
-    .lineNoContentTop {
+    .line_no_content_top {
       height: 160px;
     }
 
-    .lineNoContentBottom {
+    .line_no_content_bottom {
       height: 160px;
     }
   }
@@ -428,11 +485,11 @@
 
 @media screen and (max-width: 960px) {
   .main {
-    .rowContainerNumberThree {
-      .blockWorlds {
+    .row_container_three {
+      .block_worlds {
         flex-wrap: wrap;
 
-        .hoverMeBlock {
+        .hove_me {
           width: 300px;
           height: 300px;
           left: 35%;
@@ -440,14 +497,14 @@
       }
     }
 
-    .rowContainerNumberTwo {
-      .contentInformation {
-        .informationTextDivStyle {
-          .h2Information {
+    .row_container_two {
+      .content_information {
+        .information_text_div_style {
+          .h2_information {
             font-size: 38px;
           }
 
-          .h4Information {
+          .h4_information {
             font-size: 19px;
           }
         }
@@ -458,9 +515,13 @@
 
 @media screen and (max-width: 768px) {
   .main {
-    .rowContainerNumberOne {
-      .mainContent {
-        .buttonContainerWrapper {
+    .row_container_one {
+      .main_content {
+        .main_text {
+          font-size: 18px;
+        }
+
+        .button_application {
           .btn {
             width: 280px;
             height: 70px;
@@ -471,43 +532,67 @@
       }
     }
 
-    .rowContainerNumberTwo {
-      .contentInformation {
-        .informationTextDivStyle {
+    .row_container_two {
+      .content_information {
+        .information_text_div_style {
           padding: 10px;
 
-          .h2Information {
+          .h2_information {
             font-size: 34px;
             margin-top: 20px;
             margin-bottom: 20px;
           }
 
-          .h4Information {
+          .h4_information {
             font-size: 18px;
           }
         }
 
-        .informationWrapperImage {
+        .information_wrapper_image {
           padding: 10px;
         }
       }
     }
 
-    .rowContainerNumberThree {
-      .titleBlock {
-        .titleH3 {
+    .row_container_three {
+      .title_block {
+        .title_h3 {
           font-size: 46px;
         }
       }
 
-      .blockWorlds {
+      .block_worlds {
         flex-wrap: wrap;
         max-height: none;
 
-        .hoverMeBlock {
+        .hove_me {
           width: 325px;
           height: 325px;
         }
+      }
+    }
+  }
+
+  .worlds {
+    .circle {
+      width: 22px;
+      height: 22px;
+    }
+
+    .name {
+      font-size: 24px;
+    }
+
+    .hr_90_deg {
+      height: 70px;
+    }
+
+    .image_text {
+      min-width: 300px;
+
+      img {
+        width: 275px;
+        height: 275px;
       }
     }
   }
@@ -515,24 +600,21 @@
 
 @media screen and (max-width: 640px) {
   .main {
-    .rowContainerNumberOne {
-      .mainContent {
-        .mainTitleH1 {
-          height: 130px;
-          line-height: 130px;
-          font-size: 72px;
-        }
-
+    .row_container_one {
+      .main_content {
         .logo {
           margin-top: 64px;
           min-width: 450px;
         }
 
-        .mainTextH3 {
-          font-size: 18px;
+        .main_text {
+          font-size: 15px;
+          height: auto;
+          padding: 2.5px 15px;
+          text-align: center;
         }
 
-        .buttonContainerWrapper {
+        .button_application {
           .btn {
             width: 250px;
             height: 55px;
@@ -543,75 +625,102 @@
       }
     }
 
-    .rowContainerNumberTwo {
-      .contentInformation {
+    .row_container_two {
+      .content_information {
         height: auto;
 
-        .informationTextDivStyle {
+        .information_text_div_style {
           padding: 8px;
 
-          .h2Information {
+          .h2_information {
             font-size: 24px;
             margin-top: 15px;
             margin-bottom: 15px;
           }
 
-          .h4Information {
+          .h4_information {
             font-size: 14px;
           }
         }
       }
     }
 
-    .rowContainerNumberThree {
-      .titleBlock {
-        .titleH3 {
+    .row_container_three {
+      .title_block {
+        .title_h3 {
           font-size: 42px;
         }
 
-        .titleH4 {
+        .title_h4 {
           font-size: 15px;
         }
       }
 
-      .blockWorlds {
-        .hoverMeBlock {
+      .block_worlds {
+        .hove_me {
           display: none;
         }
       }
     }
 
-    .lineNoContentTop {
+    .line_no_content_top {
       height: 130px;
     }
 
-    .lineNoContentBottom {
+    .line_no_content_bottom {
       height: 130px;
+    }
+  }
+
+  .worlds {
+    .circle {
+      width: 20px;
+      height: 20px;
+      border: 3px solid $site-color-2;
+    }
+
+    .name {
+      font-size: 22px;
+    }
+
+    .hr_90_deg {
+      height: 65px;
+    }
+
+    .image_text {
+      width: 100%;
+      max-width: 300px;
+      margin-bottom: 15px;
+
+      img {
+        width: 200px;
+        height: 200px;
+        margin: 0 auto;
+      }
+
+      .information {
+        font-size: 14px;
+        opacity: 1;
+        top: 0;
+      }
     }
   }
 }
 
 @media screen and (max-width: 480px) {
   .main {
-    .rowContainerNumberOne {
-      .mainContent {
-        .mainTitleH1 {
-          font-size: 54px;
-          height: 94px;
-          line-height: 94px;
-        }
-
+    .row_container_one {
+      .main_content {
         .logo {
           min-width: 80%;
         }
 
-        .mainTextH3 {
+        .main_text {
           font-size: 14px;
-          height: 24px;
           line-height: 24px;
         }
 
-        .buttonContainerWrapper {
+        .button_application {
           margin-top: 45px;
 
           .btn {
@@ -624,17 +733,17 @@
       }
     }
 
-    .rowContainerNumberTwo {
+    .row_container_two {
       padding-bottom: 50px;
       padding-top: 50px;
 
-      .contentInformation {
+      .content_information {
         flex-direction: column;
 
-        .informationTextDivStyle {
+        .information_text_div_style {
           width: 100%;
 
-          .h2Information {
+          .h2_information {
             height: 45px;
             line-height: 45px;
             margin-top: 7px;
@@ -642,21 +751,20 @@
             font-size: 28px;
           }
 
-          .h4Information {
+          .h4_information {
             line-height: 20px;
           }
 
-          .rightH2 {
+          .right_h2 {
             text-align: left;
           }
 
-          .rightH4 {
+          .right_h4 {
             text-align: left;
           }
-
         }
 
-        .informationWrapperImage {
+        .information_wrapper_image {
           width: 100%;
           padding: 15px;
         }
@@ -667,24 +775,56 @@
       }
     }
 
-    .rowContainerNumberThree {
-      .titleBlock {
-        .titleH3 {
+    .row_container_three {
+      .title_block {
+        .title_h3 {
           margin-bottom: 5px;
           font-size: 30px;
           line-height: 50px;
           height: 50px;
         }
 
-        .titleH4 {
+        .title_h4 {
           font-size: 14px;
           padding-left: 15px;
           padding-right: 15px;
         }
       }
 
-      .blockWorlds {
+      .block_worlds {
         padding-top: 60px;
+      }
+    }
+  }
+
+  .worlds {
+    width: 100%;
+    min-width: auto;
+    max-width: none;
+
+    .hr_90_deg {
+      height: 45px;
+    }
+
+    .name {
+      font-size: 20px;
+    }
+
+    .image_text {
+      margin: 5px 5px 15px 5px;
+      max-width: none;
+      width: auto;
+
+      .information {
+        margin-top: 16px;
+        max-width: none;
+        min-width: auto;
+        width: auto;
+        height: auto;
+        min-height: auto;
+        max-height: 200px;
+        padding-left: 15px;
+        padding-right: 15px;
       }
     }
   }
@@ -692,23 +832,14 @@
 
 @media screen and (max-width: 360px) {
   .main {
-    .rowContainerNumberOne {
-      .mainContent {
-        .mainTitleH1 {
-          font-size: 44px;
-          height: 72px;
-          line-height: 72px;
-        }
-
-        .mainTextH3 {
+    .row_container_one {
+      .main_content {
+        .main_text {
           font-size: 12px;
-          height: auto;
           line-height: 12px;
-          padding: 2.5px 15px;
-          text-align: center;
         }
 
-        .buttonContainerWrapper {
+        .button_application {
           margin-top: 25px;
 
           .btn {
@@ -721,16 +852,16 @@
       }
     }
 
-    .rowContainerNumberTwo {
-      .contentInformation {
-        .informationTextDivStyle {
-          .h2Information {
+    .row_container_two {
+      .content_information {
+        .information_text_div_style {
+          .h2_information {
             height: 38px;
             line-height: 38px;
             font-size: 24px;
           }
 
-          .h4Information {
+          .h4_information {
             font-size: 13px;
             line-height: 18px;
           }
@@ -738,21 +869,21 @@
       }
     }
 
-    .rowContainerNumberThree {
-      .titleBlock {
-        .titleH3 {
+    .row_container_three {
+      .title_block {
+        .title_h3 {
           margin-bottom: 15px;
           font-size: 24px;
           line-height: 30px;
           height: 30px;
         }
 
-        .titleH4 {
+        .title_h4 {
           font-size: 12px;
         }
       }
 
-      .blockWorlds {
+      .block_worlds {
         padding-top: 30px;
       }
     }
