isValid формы, для нажатия на кнопку.

--- a/src/modules/components/button/Button.module.scss
+++ b/src/modules/components/button/Button.module.scss
@@ -20,6 +20,12 @@
   &:hover {
     color: $site-color-1;
   }
+
+  &[disabled] {
+    background: $site-color-5;
+    color: $site-color-4;
+    cursor: default;
+  }
 }
 
 .submit {
