--- a/src/modules/components/checkbox/Checkbox.module.scss
+++ b/src/modules/components/checkbox/Checkbox.module.scss
@@ -3,7 +3,7 @@
 .wrapper {
   width: auto;
   height: 22px;
-  margin: 5px auto 0 auto;
+  margin: 0 auto;
   display: flex;
   flex-direction: row;
 
