--- a/src/modules/components/auth-comp/Auth-comp.module.scss
+++ b/src/modules/components/auth-comp/Auth-comp.module.scss
@@ -60,12 +60,14 @@
           .avatar {
             width: 130px;
             height: 130px;
+            border-radius: 6px;
           }
 
           .main_info {
             width: 100%;
             height: auto;
             min-height: 130px;
+            overflow: hidden;
           }
         }
 
@@ -75,6 +77,7 @@
           width: auto;
           height: auto;
           min-height: 180px;
+          overflow: hidden;
         }
 
         .display_watch {
