обновлеине компоненты ChangePassword так как это не работало бы при слиянии

--- a/src/modules/components/auth-comp/Auth-comp.module.scss
+++ b/src/modules/components/auth-comp/Auth-comp.module.scss
@@ -107,12 +107,8 @@
         margin: 8px auto;
       }
 
-      .action_block {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        width: 100%;
-        height: auto;
+      .action {
+        width: 150px;
         margin: 0 auto;
       }
     }
