--- a/src/modules/components/[0_grouped_0]-Profile/change-password/Change-password.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/change-password/Change-password.module.scss
@@ -9,16 +9,13 @@
   height: 100%;
   margin: 0 auto;
 
-  .format {
-    text-align: center;
+  .form {
+    margin: 0 0 12px 0;
   }
 
-  .password {
-    margin: 6px auto;
-  }
-
-  .check_wrapper {
-    margin: 2px auto 32px auto;
+  .action {
+    width: 150px;
+    margin: 0 auto;
   }
 }
 
