Redesign & recode auth page (#61)
Большой редизайн страницы подачи заявки, много улучшений у <Input/>, <Select/>, <Textarea/>, <Checkbox/>, <Notifications/>. Большая чистка и улучшение читабельности всего кода. Привидение к единому стилю страницы изменения пароля, переход на форму, избавление от ручных проверок. Много и много всего.

--- a/src/modules/components/textarea/Textarea.module.scss
+++ b/src/modules/components/textarea/Textarea.module.scss
@@ -31,7 +31,7 @@
   &:disabled {
     border: none;
     border-radius: 0;
-    color: $site-color-2;
+    color: $site-color-6;
 
     &:hover,
     &:active,
@@ -39,6 +39,18 @@
       background: $site-color-12;
     }
   }
+}
+
+.height_small {
+  max-height: 64px;
+}
+
+.height_medium {
+  max-height: 128px;
+}
+
+.height_large {
+  max-height: 256px;
 }
 
 @media screen and (max-width: 1600px) {
