--- a/src/modules/components/auth-comp/Auth-comp.module.scss
+++ b/src/modules/components/auth-comp/Auth-comp.module.scss
@@ -1,222 +1,153 @@
 @import "src/Variables";
 
-.auth-block {
+.application_block {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   width: 100%;
   max-width: 1600px;
   height: auto;
-  margin: 32px auto 192px auto;
-
-  .error {
-    width: 100%;
-    font-size: 12px;
-    font-weight: 400;
-    font-family: $fontCustom2;
-    height: 22px;
-    line-height: 22px;
-    text-align: center;
-    color: $site-color-11;
-    transition: all 0.35s ease;
-  }
+  margin: 0 auto 96px auto;
 
   .container {
-    width: 100%;
-    max-width: 80%;
-    height: 100%;
-    min-height: 750px;
-    max-height: none;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    border-radius: 16px;
-    border: 1px solid $site-color-5;
-    background: $site-color-4;
-    padding-bottom: 12px;
+    flex-direction: row;
+    justify-content: center;
 
-    .title-register {
-      font-size: 20px;
-      font-weight: 400;
-      font-family: $fontCustom2;
-      color: $site-color-2;
-      width: 100%;
-      height: 32px;
-      line-height: 32px;
-      text-align: center;
-      margin: 16px auto;
-    }
-
-    form {
+    .main_form {
       display: flex;
       flex-direction: column;
+      width: 60%;
+      max-width: 60%;
 
-      .line {
+      form {
         display: flex;
         flex-direction: column;
-        position: relative;
-        width: auto;
-        margin: 12px auto;
+        justify-content: flex-start;
+        border-radius: 12px;
+        border: 2px solid $site-color-5;
+        background: $site-color-4;
+        padding: 12px;
+        margin: 0 12px;
 
-        .label {
-          position: absolute;
-          top: 18px;
-          left: 16px;
-          font-size: 14px;
-          font-weight: 400;
-          font-family: $fontCustom2;
-          color: $site-color-2;
-          transition: all 0.35s ease;
-          pointer-events: none;
-          padding: 0 8px;
-        }
-
-        input,
-        select {
-          width: 100%;
-          min-width: 400px;
-          max-width: 400px;
-          color: $site-color-8;
-          font-weight: 400;
-          font-size: 14px;
-          font-family: $fontCustom2;
-          padding: 0 12px 0 12px;
-          height: 48px;
-          line-height: 48px;
-          background: transparent;
-          border: 1px solid $site-color-5;
-          border-radius: 8px;
-          transition: all 0.35s ease;
-
-          option {
-            background-color: $site-color-12;
-            border: 1px solid $site-color-1;
-            color: $site-color-2;
-            transition: all 0.35s ease;
-            font-size: 13px;
-            font-weight: 400;
-            font-family: $fontCustom2;
-            height: 14px;
-            line-height: 14px;
-          }
-
-          &:focus {
-            outline: none;
-
-            + .label {
-              color: $site-color-2;
-              transform: translate3d(0, -24px, 0);
-              font-size: 11px;
-              background: $site-color-4 !important;
-            }
-          }
-
-          &:not(:placeholder-shown) + .label {
-            transform: translate3d(0, -24px, 0);
-            font-size: 11px;
-            background: $site-color-4 !important;
-          }
-        }
-
-        .inputErrors {
-          box-shadow: inset 0 -1px 0 $site-color-11;
-
-          ~ .error {
-            position: absolute;
-            background: $site-color-4 !important;
-            width: max-content;
-            margin: 0 auto;
-            top: 36px;
-            padding: 0 8px;
-            left: 50%;
-            transform: translate(-50%);
-          }
-        }
-      }
-
-      .check-block {
-        margin: 8px auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-
-        label {
-          height: 22px;
-          line-height: 22px;
-          font-family: $fontCustom2;
-          font-weight: 400;
-          font-size: 14px;
-        }
-
-        input[type="checkbox"] {
-          display: none;
-        }
-
-        input[type="checkbox"] + label {
-          display: block;
-          position: relative;
-          padding-left: 35px;
-          margin-bottom: 20px;
-          color: $site-color-2;
-          cursor: pointer;
-        }
-
-        input[type="checkbox"] + label:last-child {
-          margin-bottom: 0;
-        }
-
-        input[type="checkbox"] + label:before {
-          content: "";
-          display: flex;
-          width: 20px;
-          height: 20px;
-          border: 1px solid $site-color-2;
-          position: absolute;
-          left: 0;
-          top: 0;
-          opacity: 0.6;
-          transition: all 0.12s, border-color 0.08s;
-        }
-
-        input[type="checkbox"]:checked + label:before {
-          width: 10px;
-          top: -5px;
-          left: 5px;
-          border-radius: 0;
-          opacity: 1;
-          border-color: $site-color-8;
-          border-top-color: transparent;
-          border-left-color: transparent;
-          transform: rotate(45deg);
-        }
-
-        .checkboxErrors + label:before {
-          border: 1px solid $site-color-11 !important;
+        .check {
+          margin: 8px auto 0 auto;
         }
       }
     }
 
-    .wrapper-warn {
-      margin: 12px auto;
-    }
-
-    .action_block {
+    .check_form {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       justify-content: center;
-      width: 100%;
-      height: auto;
+      min-width: 40%;
+      max-width: 40%;
+      padding: 0 12px;
+
+      .card_wrapper {
+        display: flex;
+        flex-direction: column;
+        border-radius: 12px;
+        border: 2px solid $site-color-5;
+        background: $site-color-4;
+        padding: 12px;
+
+        .main_watch {
+          display: flex;
+          flex-direction: row;
+          justify-content: flex-start;
+          width: auto;
+          height: auto;
+
+          .avatar {
+            width: 130px;
+            height: 130px;
+            border-radius: 8px;
+            padding: 4px;
+          }
+
+          .main_info {
+            width: 100%;
+            height: auto;
+            min-height: 130px;
+            overflow: hidden;
+          }
+        }
+
+        .additional_watch {
+          display: flex;
+          flex-direction: column;
+          width: auto;
+          height: auto;
+          min-height: 180px;
+          overflow: hidden;
+        }
+
+        .display_watch {
+          color: $site-color-2;
+          padding: 2px;
+          margin: 3px;
+          font-size: 14px;
+          font-weight: 400;
+          font-family: $fontCustom2;
+          line-height: 1.25;
+          width: auto;
+          height: auto;
+
+          .colored {
+            font-size: inherit;
+            font-weight: inherit;
+            font-family: inherit;
+            color: $site-color-8;
+          }
+        }
+      }
+
+      .wrapper_warn {
+        margin: 8px auto;
+      }
+
+      .action {
+        width: 150px;
+        margin: 0 auto;
+      }
     }
   }
 }
 
 @media screen and (max-width: 1600px) {
+  .application_block {
+    .container {
+      .main_form {
+        width: 50%;
+        max-width: 50%;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 1400px) {
 }
 
 @media screen and (max-width: 1280px) {
+  .application_block {
+    .container {
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+
+      .main_form {
+        width: 90%;
+        max-width: 90%;
+      }
+
+      .check_form {
+        width: 90%;
+        max-width: 90%;
+        margin: 16px 0 0 0;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 1024px) {
@@ -226,43 +157,42 @@
 }
 
 @media screen and (max-width: 768px) {
+  .application_block {
+    .container {
+      .main_form {
+        width: 98%;
+        max-width: 98%;
+      }
+
+      .check_form {
+        width: 98%;
+        max-width: 98%;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 640px) {
-  .auth-block {
-    padding: 0 12px;
-
-    .error {
-      font-size: 11px;
-    }
+  .application_block {
+    margin: 0 auto 12px auto;
 
     .container {
-      max-width: none;
+      .check_form {
+        .card_wrapper {
+          .main_watch {
+            .avatar {
+              width: 100px;
+              height: 100px;
+              padding: 2px;
+            }
 
-      .title-register {
-        font-size: 18px;
-      }
-
-      form {
-        .line {
-          margin: 10px auto;
-
-          .label {
-            font-size: 12px;
+            .main_info {
+              min-height: 100px;
+            }
           }
 
-          input,
-          select {
-            font-size: 12px;
-          }
-        }
-
-        .check-block {
-          label {
-            height: auto;
-            text-align: center;
-            max-width: 475px;
-            font-size: 12px;
+          .display_watch {
+            font-size: 12.5px;
           }
         }
       }
@@ -271,23 +201,6 @@
 }
 
 @media screen and (max-width: 480px) {
-  .auth-block {
-    .container {
-      form {
-        .line {
-          input,
-          select {
-            min-width: 310px;
-            max-width: none;
-          }
-        }
-
-        .check-block {
-          margin: 8px;
-        }
-      }
-    }
-  }
 }
 
 @media screen and (max-width: 360px) {
