--- a/src/modules/components/checkbox/Checkbox.module.scss
+++ b/src/modules/components/checkbox/Checkbox.module.scss
@@ -2,14 +2,16 @@
 
 .wrapper {
   width: auto;
-  height: 22px;
-  margin: 5px auto 0 auto;
+  height: auto;
+  margin: 0 auto;
   display: flex;
   flex-direction: row;
 
   .message {
-    height: 22px;
+    width: auto;
+    height: auto;
     line-height: 22px;
+    text-align: center;
     font-size: 14px;
     font-weight: 400;
     font-family: $fontCustom2;
@@ -24,7 +26,10 @@
   .checkmark {
     display: flex;
     width: 20px;
+    min-width: 20px;
     height: 20px;
+    min-height: 20px;
+    margin: auto 0;
     border: 1px solid $site-color-5;
     border-radius: 4px;
     position: relative;
