--- a/src/modules/components/input/Input.module.scss
+++ b/src/modules/components/input/Input.module.scss
@@ -1,24 +1,122 @@
 @import "src/Variables";
 
-.input {
-  width: 100%;
-  min-width: 0;
-  max-width: 100%;
-  height: 32px;
-  padding: 5px 8px;
-  font-family: $fontCustom2;
-  font-size: 13px;
-  color: $site-color-8;
-  border: 1px solid $site-color-5;
-  border-radius: 4px;
-  background: $site-color-12;
-  transition: all 0.35s ease;
-  outline: none;
+.input_customs {
+  display: flex;
+  position: relative;
 
-  &:hover,
-  &:active,
-  &:focus {
+  .input {
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
+    height: 32px;
+    padding: 5px 8px;
+    font-family: $fontCustom2;
+    font-size: 13px;
+    color: $site-color-8;
+    border: 1px solid $site-color-5;
+    border-radius: 4px;
+    background: $site-color-12;
+    transition: all 0.35s ease;
+    outline: none;
+
+    &:hover,
+    &:active,
+    &:focus {
+      background: $site-color-1;
+    }
+
+    &[type="number"] {
+      position: relative;
+    }
+
+    &[type="number"]::-webkit-outer-spin-button,
+    &[type="number"]::-webkit-inner-spin-button {
+      -webkit-appearance: inner-spin-button !important;
+      width: 25px;
+      position: absolute;
+      top: 2px;
+      bottom: 2px;
+      right: 8px;
+      height: auto;
+    }
+  }
+
+  &:hover ._number,
+  .input:focus + ._number,
+  .input:active + ._number {
+    display: flex;
+  }
+
+  &:hover ._password,
+  .input:focus + ._password,
+  .input:active + ._password {
+    display: flex;
+  }
+
+  .custom_block {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    right: 8px;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  ._number {
+    display: none;
+    width: 17px;
+    min-width: 17px;
+    height: 28px;
     background: $site-color-1;
+    pointer-events: none;
+
+    .swipe {
+      font-size: 8px;
+      color: $site-color-8;
+      pointer-events: none;
+
+      &:nth-child(1) {
+        margin: 0 0 2px 0;
+      }
+    }
+  }
+
+  ._password {
+    display: flex;
+
+    .no_checkmark {
+      display: none;
+    }
+
+    .checkmark {
+      display: flex;
+      width: 16px;
+      height: 16px;
+      border: 0.5px solid $site-color-5;
+      border-radius: 4px;
+      position: relative;
+      vertical-align: middle;
+
+      &::before {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 10px;
+        height: 10px;
+        background-color: $site-color-8;
+        border-radius: 2px;
+        opacity: 0;
+        transition: opacity 0.35s ease-in-out;
+      }
+    }
+
+    .no_checkmark:checked + .checkmark::before {
+      opacity: 1;
+    }
   }
 }
 
