--- a/src/modules/components/select/Select.module.scss
+++ b/src/modules/components/select/Select.module.scss
@@ -1,31 +1,54 @@
 @import "src/Variables";
 
-.select {
-  width: 100%;
-  min-width: 100%;
-  max-width: 100%;
-  height: 32px;
-  padding: 5px 8px;
-  font-family: $fontCustom2;
-  font-size: 13px;
-  color: $site-color-8;
-  border: 1px solid $site-color-5;
-  border-radius: 4px;
-  background: $site-color-12;
-  transition: all 0.35s ease;
-  outline: none;
+.select_customs {
+  display: flex;
+  position: relative;
 
-  &:hover,
-  &:active,
-  &:focus {
-    background: $site-color-1;
+  .select {
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
+    height: 32px;
+    padding: 5px 8px;
+    font-family: $fontCustom2;
+    font-size: 13px;
+    color: $site-color-8;
+    border: 1px solid $site-color-5;
+    border-radius: 4px;
+    background: $site-color-12;
+    transition: all 0.35s ease;
+    outline: none;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+
+    &:hover,
+    &:active,
+    &:focus {
+      background: $site-color-1;
+    }
+
+    .options {
+      color: $site-color-2;
+      background: $site-color-4;
+      font-family: $fontCustom2;
+      font-size: 12px;
+    }
   }
 
-  .options {
-    color: $site-color-2;
-    background: $site-color-4;
-    font-family: $fontCustom2;
-    font-size: 12px;
+  .swipe {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%) rotate(90deg);
+    font-size: 11px;
+    color: $site-color-8;
+    pointer-events: none;
+    transition: transform 0.35s ease;
+  }
+
+  .select:focus + .swipe {
+    transform: translateY(-50%) rotate(0deg);
   }
 }
 
